# KPIs-Servicios

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/analytics/: __init__.py
backend/app/analytics/calculators/: backlog.py  productivity.py  sla.py
backend/app/analytics/core/: base_calculator.py  registry.py  (+1 more)
backend/app/api/: README.md  __init__.py
backend/app/config/: README.md  settings.py
backend/app/core/: README.md  __init__.py  config.py  context.py  logging.py
backend/app/db/: README.md  __init__.py  base.py  session.py
backend/app/dependencies/: README.md  __init__.py  db.py
backend/app/etl/: __init__.py
backend/app/exceptions/: README.md  __init__.py  handlers.py
backend/app/loaders/: README.md  __init__.py
backend/app/middleware/: README.md  __init__.py  trace.py
backend/app/models/: README.md  __init__.py  analytics.py  operational.py  staging.py
backend/app/repositories/: README.md  __init__.py
backend/app/schemas/: README.md
backend/app/services/: README.md
backend/app/utils/: README.md  __init__.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 001_create_staging_tables.py  002_create_operational_tables.py  003_create_analytics_tables.py
backend/tests/: README.md  test_config.py  test_health.py
backend/tests/analytics/: test_kpi_engine.py
backend/tests/api/: test_analytics_api.py
backend/tests/etl/: test_import_service.py  test_synchronization_service.py
(+101 files in other folders)
